--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.21.2",
-    "recoil": "^0.7.7",
-    "socket.io-client": "^4.7.4"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
