--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,21 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    // ignore ts errors
+    "strict": false
+  },
+  "globals": {
+    "FIREBASE_API_KEY": "readonly",
+    "FIREBASE_AUTH_DOMAIN": "readonly",
+    "FIREBASE_PROJECT_ID": "readonly",
+    "FIREBASE_STORAGE_BUCKET": "readonly",
+    "FIREBASE_MESSAGING_SENDER_ID": "readonly",
+    "FIREBASE_APP_ID": "readonly",
+    "FIREBASE_MEASUREMENT_ID": "readonly"
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
